--- a/calculator.html
+++ b/calculator.html
@@ -131,7 +131,7 @@
       href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text"
       rel="stylesheet"
     />
-    <div id="main">
+    <div id="calculatormain">
       <div class="calculator">
         <input type="text" id="screen" />
         <div class="calculator__row1">
