--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Oooh+Baby&display=swap"
       rel="stylesheet" />
+      <link href="calculator.html" rel="import" />
     <style>
       body {
         line-height: 1.6;
@@ -143,7 +144,7 @@
       }
     function ecrit(nom, json) {document.getElementById(nom).innerHTML = json;}
     const calcul = document.getElementById("calcul");
-    calcul.load("calculator.html"); 
+    calcul.innerText(document.getElementById("calculatormain")); 
  
       const span_h = document.getElementById("aig_h");
       const span_m = document.getElementById("aig_m");
