--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       }
     function ecrit(nom, json) {document.getElementById(nom).innerHTML = json;}
     const calcul = document.getElementById("calcul");
-    calcul.innerText(document.getElementById("calculatormain")); 
+    calcul.innerText=document.getElementById("calculatormain"); 
  
       const span_h = document.getElementById("aig_h");
       const span_m = document.getElementById("aig_m");
