--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
        recupurl("https://kayoo123.github.io/astroo-api/jour.json").then(x => ecrit("h_j",x.vierge)); 
        recupurl("https://us-central1-tf-natal.cloudfunctions.net/horoscopeapi_test?token=mmEUtLATc8w_UNnHuR2&sign=virgo&date=today")  .then(horos => {horosvar = {
   current_date: horos.current_date,
-  compatibility: horos.compatibility,
+  compatibility: translate(horos.compatibility),
   lucky_time: horos.lucky_time,
   lucky_number: horos.lucky_number,
-  mood: horos.mood,
+  mood: translate(horos.mood),
   color: horos.color,
-  description: horos.description
-};return horosvar;})    .then(horos => {return translate(JSON.stringify(horos) );}) 
-      .then(horos => ecrit("h_h",JSON.parse(horos) )) ;
+  description: translate(horos.description)
+};console.log(horosvar);return horosvar;})   
+      .then(horos => ecrit("h_h",horos )) ;
       //.then(horos => translate(horos.description).then(horostrad=>ecrit("h_h",horostrad))) ;
 
 
