--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       console.log (retourtableau);
       console.log (retourtableau[0]);
       var retour = "";
-      retourtableau.forEach(i=> retour+=i[0]);
+      retourtableau[0].forEach(i=> retour+=i[0]);
       return  retour; 
     }
     function ecrit(nom, json) {document.getElementById(nom).innerHTML = json;}
