--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   color: horos.color,
   description: translate(horos.description)
 };console.log(horosvar);return horosvar;})   
-      .then(horos => ecrit("h_h",horos )) ;
+      .then(horos => ecrit("h_h",JSON.stringify( horos ))) ;
       //.then(horos => translate(horos.description).then(horostrad=>ecrit("h_h",horostrad))) ;
 
 
