--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
        recupurl("https://kayoo123.github.io/astroo-api/jour.json").then(x => ecrit("h_j",x.vierge)); 
        recupurl("https://us-central1-tf-natal.cloudfunctions.net/horoscopeapi_test?token=mmEUtLATc8w_UNnHuR2&sign=virgo&date=today&nodate")  .then(horos => {horosvar = {
         current_date: horos.current_date,
-        compatibility: translate(horos.compatibility).text,
+        compatibility: translate(horos.compatibility).result,
         lucky_time: horos.lucky_time,
         lucky_number: horos.lucky_number,
         mood: translate(horos.mood),
@@ -134,15 +134,15 @@
 
 
     async function translate(text){
-      console.log(text);
+      //console.log(text);
       var sourceLang = 'en';
       var targetLang = 'fr'; 
       var url = "https://translate.googleapis.com/translate_a/single?client=gtx&sl="+ sourceLang + "&tl=" + targetLang + "&dt=t&q=" + encodeURI(text); 
       console.log(url);
       const resp = await fetch(url);
       var retourtableau = await resp.json();
-      console.log (retourtableau);
-      console.log (retourtableau[0]);
+      //console.log (retourtableau);
+      //console.log (retourtableau[0]);
       var retour = "";
       retourtableau[0].forEach(i=> retour+=i[0]);
       return  retour; 
