--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
        recupurl("https://kayoo123.github.io/astroo-api/jour.json").then(x => ecrit("h_j",x.vierge)); 
        recupurl("https://us-central1-tf-natal.cloudfunctions.net/horoscopeapi_test?token=mmEUtLATc8w_UNnHuR2&sign=virgo&date=today&nodate").then(horos => {horosvar = {
         current_date: horos.current_date,
-        compatibility: translate(horos.compatibility).then(x=> x),
+        compatibility: translate(horos.compatibility).then(x=>horosvar.compatibility= x),
         lucky_time: horos.lucky_time,
         lucky_number: horos.lucky_number,
         mood: translate(horos.mood).then(x=> x),
