--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           console.log("HTTP-Error: " + response.status);
         } 
        }
-      const horosvar ={} ;
+      var horosvar ={} ;
        
        recupurl("https://kayoo123.github.io/astroo-api/jour.json").then(x => ecrit("h_j",x.vierge)); 
        recupurl("https://us-central1-tf-natal.cloudfunctions.net/horoscopeapi_test?token=mmEUtLATc8w_UNnHuR2&sign=virgo&date=today&nodate").then(horos => {horosvar = {
