--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
        .then(  async (horos) =>  { 
         compatibility = await translate(horos.compatibility);
         mood = await translate(horos.mood);
-        description = await translate(horos.description)
+        description = await translate(horos.description);
         horosvar = {
         current_date: horos.current_date,
         compatibility: compatibility,
