--- a/index.html
+++ b/index.html
@@ -156,15 +156,15 @@
     .then(response => {
       if (response.status === 200) {
         const responseText = response.data;
-
-        const $ = cheerio.load(responseText);
-
+        console.log(responseText);
+        const $ = cheerio.load(responseText); 
         // get the specific content from the classname
         const mainHorDiv = $('.horoscope-content');
  
-
+        console.log(mainHorDiv);
         // get the text content and remove the first 3 characters
         const description = mainHorDiv.text().slice(2);
+        console.log(description);
         ecrit("h_t3",description);
       }
     })
