--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       function dateTime() {
         clock();
         currentWeek();
-        setTimeout(clock, 500);
+        setTimeout(dateTime, 500);
       }
 
       dateTime();
