--- a/index.html
+++ b/index.html
@@ -151,7 +151,12 @@
         
       } ) ;
       //.then(horos => translate(horos.description).then(horostrad=>ecrit("h_h",horostrad))) ;
-    } 
+    }  
+    var stringToHTML = function (str) {
+      var parser = new DOMParser();
+      var doc = parser.parseFromString(str, 'text/html');
+      return doc.body;
+      };
     function horostest3 (){
               var xhr = new XMLHttpRequest();
         xhr.open("GET", "https://cors-anywhere.herokuapp.com/https://www.horoscope.com/fr/horoscopes/general/horoscope-general-daily-today.aspx?sign=6");
@@ -161,6 +166,7 @@
               console.log("erreur réseau : " + this.status + " " + this.statusText);
           } else {
             console.log(this.responseText); 
+            const horosrecup = stringToHTML(this.responseText);
             const cheerio = require('cheerio');
             const $ = cheerio.load(responseText); 
         // get the specific content from the classname
