--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             console.log(this.responseText); 
             const horosrecup = stringToHTML(this.responseText);
             console.log(horosrecup); 
-            const mainHorDiv = horosrecup.getElementsByClassName('.horoscope-content');
+            const mainHorDiv = horosrecup.getElementsByClassName('horoscope-content');
             console.log(mainHorDiv); 
             console.log(mainHorDiv.getElementsByTagName('p')[0]); 
     
