--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     const urlhorostravailA=  "https://www.horoscope.com/fr/horoscopes/travail/horoscope-travail-du-jour-aujourdhui.aspx?signe=6";
 
     horostest3 ("h_2",urlhorosgeneralA);
-    horostest3 ("h_3",urlhorostravailA);
+   // horostest3 ("h_3",urlhorostravailA);
     function horostest3 (ou, url){
               var xhr = new XMLHttpRequest();
         xhr.open("GET", preurl+url);
