--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               };
         </script>
         <script type="module">
-          import puppeteer from 'puppeteer';
+          import puppeteer from './node_modules/puppeteer/pupperteer.ts';
           (async () => {
             // Launch the browser and open a new blank page
             const browser = await puppeteer.launch();
