--- a/index.html
+++ b/index.html
@@ -144,38 +144,14 @@
               return doc.body;
               };
         </script>
-        <script type="module">
-          import puppeteer from './node_modules/puppeteer/src/puppeteer.ts';
-          (async () => {
-            // Launch the browser and open a new blank page
-            const browser = await puppeteer.launch();
-            const page = await browser.newPage();
+        <script  >
+         const puppeteer = require('puppeteer')
 
-            // Navigate the page to a URL
-            await page.goto('https://developer.chrome.com/');
-
-            // Set screen size
-            await page.setViewport({width: 1080, height: 1024});
-
-            // Type into search box
-            await page.type('.search-box__input', 'automate beyond recorder');
-
-            // Wait and click on first result
-            const searchResultSelector = '.search-box__link';
-            await page.waitForSelector(searchResultSelector);
-            await page.click(searchResultSelector);
-
-            // Locate the full title with a unique string
-            const textSelector = await page.waitForSelector(
-              'text/Customize and automate'
-            );
-            const fullTitle = await textSelector?.evaluate(el => el.textContent);
-
-            // Print the full title
-            console.log('The title of this blog post is "%s".', fullTitle);
-
-            await browser.close();
-          })();
+          describe("My first Setup Testing",()=>{
+              it("Home landing page",async()=>{
+              const browser = await puppeteer.launch({headless:false})
+              });
+          });
       </script>
         <script>
           const preurl ="https://app.zenscrape.com/api/v1/get?apikey=ecde22d0-6cb5-11ee-8444-a5ff23c56f02&url=";
