--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Oooh+Baby&display=swap"
       rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Montez&display=swap" rel="stylesheet">
     <link href="calculator.html" rel="import" />
     <style>
       body {
         line-height: 1.6;
-        font-family: "Oooh Baby" !important;
+        font-family: "Montez" !important;
         align-items: center;
   background: radial-gradient(ellipse at center, rgba(255,179,206,0) 0%, rgba(255,180,199,0) 43%, rgba(255,181,189,0.43) 100%)  !important;
   background-attachment: fixed;
@@ -59,10 +60,6 @@
                   data-bs-target="#nav-tab-3">
                   Travail
                 </button>
-                <button class="nav-link" data-bs-toggle="tab"
-                  data-bs-target="#nav-tab-4">
-                  Calc
-                </button>
               </div>
             </nav>
             <div class="tab-content " id="nav-tabContent">
@@ -82,9 +79,7 @@
                   </ul>
                 </span>
               </div>
-              <div class="tab-pane fade" id="nav-tab-4">
-                <div id="calcul"></div>
-              </div>
+          
             </div>
           </div>
 
