--- a/Coeli.html
+++ b/Coeli.html
@@ -7,15 +7,19 @@
   body { font-family: Arial; text-align: center; padding: 40px; }
   button { margin: 8px; padding: 10px 18px; cursor: pointer; }
   #result { margin-top: 30px; white-space: pre-line; font-size: 18px; }
+  .low { color: green; font-weight: bold; }
+  .medium { color: orange; font-weight: bold; }
+  .high { color: red; font-weight: bold; }
+  .critical { color: darkred; font-weight: bold; font-size: 20px; }
 </style>
 </head>
 <body>
 
 <h2>⚖️ Système Officiel de Régulation Adolescente™</h2>
 
-<button onclick="handleCase('insolence')">Insolence</button>
 <button onclick="handleCase('repetition')">Demande répétitive</button>
 <button onclick="handleCase('impulsif')">Demande sans réfléchir</button>
+<button onclick="handleCase('insolence')">Insolence</button>
 <button onclick="handleCase('mensonge')">Mensonge</button>
 <button onclick="handleCase('refus')">Refus d’obéir</button>
 
@@ -23,43 +27,82 @@
 
 <script>
 
+const cases = {
+  repetition: { gravity: "🟢 Gravité : Faible", class: "low" },
+  impulsif: { gravity: "🟢 Gravité : Faible", class: "low" },
+  insolence: { gravity: "🟠 Gravité : Moyenne", class: "medium" },
+  mensonge: { gravity: "🔴 Gravité : Élevée", class: "high" },
+  refus: { gravity: "⛔ Gravité : Intolérable", class: "critical" }
+};
+
 const reformulations = {
-  insolence: [
-    "Expression verbale à tonalité inappropriée détectée.",
-    "Tentative de remise en question de l’autorité parentale identifiée."
-  ],
   repetition: [
     "Demande déjà traitée réintroduite sans élément nouveau.",
-    "Stratégie d’usure psychologique détectée."
+    "Stratégie d’usure psychologique détectée.",
+    "Requête récurrente sans modification du contexte.",
+    "Tentative de répétition persuasive identifiée."
   ],
   impulsif: [
     "Demande formulée sans analyse préalable des conséquences.",
-    "Proposition spontanée sans étude de faisabilité."
+    "Proposition spontanée sans étude de faisabilité.",
+    "Expression d’un besoin immédiat non structuré.",
+    "Initiative précipitée sans projection réaliste."
+  ],
+  insolence: [
+    "Expression verbale à tonalité inappropriée détectée.",
+    "Remise en question du cadre parental identifiée.",
+    "Usage d’un registre discursif non conforme au cadre familial.",
+    "Débordement émotionnel orienté vers contestation."
   ],
   mensonge: [
     "Altération volontaire de la vérité constatée.",
-    "Narratif divergent de la réalité observée."
+    "Narratif divergent de la réalité observée.",
+    "Construction factuelle inexacte identifiée.",
+    "Dissimulation partielle d’informations."
   ],
   refus: [
     "Non-exécution d’une directive parentale validée.",
-    "Blocage opérationnel dans l’application des consignes."
+    "Blocage opérationnel dans l’application des consignes.",
+    "Refus explicite d’adhésion aux règles établies.",
+    "Opposition active au cadre éducatif."
   ]
 };
 
-const realPunishments = [
-  "Privation d’écran pendant 48h.",
-  "Rédaction d’un mot d’excuse argumenté.",
-  "Tâches ménagères supplémentaires.",
-  "Suspension temporaire des sorties.",
-  "Nettoyage complet de la chambre sous supervision."
+/* Sanctions faibles */
+const lowPunishments = [
+  "Préparer un café ou un thé au parent référent.",
+  "Offrir un massage de 5 minutes.",
+  "Faire un câlin officiel et sincère.",
+  "Réaliser un dessin personnalisé.",
+  "Aider sur une petite tâche domestique."
 ];
 
+/* Sanctions moyennes */
+const characters = ["un chevalier", "une princesse", "un astronaute", "un ninja", "un pirate"];
+const victims = ["son chat", "une licorne", "un roi", "un dragon", "une fée"];
+
+function generateThemedLetter() {
+  const char = randomItem(characters);
+  const victim = randomItem(victims);
+  return `Rédiger une lettre d’excuse dans laquelle ${char} a été insolent envers ${victim}, avec morale finale sur le respect.`;
+}
+
+/* Sanctions graves */
+const highPunishments = [
+  "Privation d’écran pendant 48h.",
+  "Nettoyage complet de la chambre sous supervision.",
+  "Rédaction d’un mot d’excuse argumenté.",
+  "Rangement complet de la salle de jeux.",
+  "Tâches ménagères supplémentaires."
+];
+
+/* Sanctions absurdes longues */
 const absurdPunishments = [
-  "Enfermement symbolique dans un donjon pendant deux semaines.",
-  "Exposition aux lions dans l’arène familiale.",
-  "Exil temporaire dans le royaume des corvées éternelles.",
-  "Obligation de réciter le code parental à l’aube chaque jour.",
-  "Transformation en écuyer officiel du parent suprême."
+ "Enfermement dans les oubliettes du royaume familial pendant quatorze cycles lunaires, nourri exclusivement de soupe médiévale tiède.",
+  "Condamnation à servir comme écuyer personnel du parent suprême avec révérence obligatoire à chaque entrée dans la pièce.",
+  "Exil temporaire au sommet de la Tour des Devoirs Infinis avec obligation de méditer sur la notion d’obéissance.",
+  "Participation forcée à la Grande Quête du Rangement Éternel jusqu’à purification complète de l’honneur familial.",
+  "Offrande symbolique aux lions impériaux de l’arène domestique sous regard solennel du Conseil des Parents."
 ];
 
 function randomItem(array) {
@@ -67,19 +110,38 @@ function randomItem(array) {
 }
 
 function handleCase(type) {
+
+  const caseInfo = cases[type];
+  const reformulation = randomItem(reformulations[type]);
+
+  let punishment;
+
+  if (caseInfo.class === "low") {
+    punishment = randomItem(lowPunishments);
+  }
+  else if (caseInfo.class === "medium") {
+    punishment = generateThemedLetter();
+  }
+  else {
+    punishment = randomItem(highPunishments);
+  }
+
   const result = `
+${caseInfo.gravity}
+
 📌 Analyse :
+${reformulation}
 
-${randomItem(reformulations[type])}
+🛑 Sanction :
+${punishment}
 
-🛑 Sanction réaliste potentielle :
-${randomItem(realPunishments)}
-
-🏰 Sanction alternative médiévale disproportionnée :
+🏰 Sanction alternative :
 ${randomItem(absurdPunishments)}
   `;
 
-  document.getElementById("result").innerText = result;
+  const resultDiv = document.getElementById("result");
+  resultDiv.className = caseInfo.class;
+  resultDiv.innerText = result;
 }
 
 </script>
