--- a/Coeli.html
+++ b/Coeli.html
@@ -2,37 +2,159 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Système Officiel de Régulation Adolescente™</title>
 <style>
-  body { font-family: Arial; text-align: center; padding: 40px; }
-  button { margin: 8px; padding: 10px 18px; cursor: pointer; }
-  #result { margin-top: 30px; white-space: pre-line; font-size: 18px; }
-  .low { color: green; font-weight: bold; }
-  .medium { color: orange; font-weight: bold; }
-  .high { color: red; font-weight: bold; }
-  .critical { color: darkred; font-weight: bold; font-size: 20px; }
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 20px;
+    background-color: #f4f4f4;
+  }
+
+  .container {
+    max-width: 900px;
+    margin: auto;
+    background: white;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  }
+
+  h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .button-group {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+  }
+
+  button {
+    flex: 1 1 200px;
+    padding: 14px;
+    font-size: 16px;
+    border-radius: 8px;
+    border: none;
+    background-color: #333;
+    color: white;
+    cursor: pointer;
+    transition: background 0.2s ease;
+  }
+
+  button:hover {
+    background-color: #555;
+  }
+
+  #result {
+    margin-top: 25px;
+    padding: 15px;
+    border-radius: 8px;
+    white-space: pre-line;
+    line-height: 1.5;
+  }
+
+  .low { background-color: #e6f7e6; color: #0a7a0a; font-weight: bold; }
+  .medium { background-color: #fff4e6; color: #b36b00; font-weight: bold; }
+  .high { background-color: #ffe6e6; color: #b30000; font-weight: bold; }
+  .critical { background-color: #3b0000; color: white; font-weight: bold; }
+
+  /* Mobile optimization */
+  @media (max-width: 600px) {
+    body { padding: 10px; }
+    .container { padding: 15px; }
+    button { font-size: 15px; padding: 12px; }
+    #result { font-size: 15px; }
+  }
+
+
+/* ============================= */
+/* THEATRALITE - SANCTION ROYALE */
+/* ============================= */
+
+@keyframes royalAppear {
+  0% {
+    opacity: 0;
+    transform: scale(0.9);
+    filter: blur(4px);
+  }
+  60% {
+    transform: scale(1.03);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+    filter: blur(0);
+  }
+}
+
+@keyframes royalShake {
+  0%, 100% { transform: translateX(0); }
+  25% { transform: translateX(-6px); }
+  50% { transform: translateX(6px); }
+  75% { transform: translateX(-4px); }
+}
+
+@keyframes darkPulse {
+  0% { box-shadow: 0 0 10px rgba(139, 0, 0, 0.5); }
+  50% { box-shadow: 0 0 35px rgba(139, 0, 0, 0.9); }
+  100% { box-shadow: 0 0 10px rgba(139, 0, 0, 0.5); }
+}
+
+.intolerable {
+  background: linear-gradient(135deg, #3b0000, #1a0000);
+  border: 2px solid #8b0000;
+  color: #ffeaea;
+  animation:
+    royalAppear 0.5s ease-out forwards,
+    royalShake 0.4s ease-in-out 0.5s,
+    darkPulse 2s infinite 1s;
+}
+
+/* Effet decret qui se revele */
+@keyframes decreeReveal {
+  from { width: 0; }
+  to { width: 100%; }
+}
+
+.decree-text {
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 2px solid #ffeaea;
+  animation: decreeReveal 1.5s steps(40, end) forwards;
+}
+
 </style>
 </head>
 <body>
 
+<div class="container">
+
 <h2>⚖️ Système Officiel de Régulation Adolescente™</h2>
 
-<button onclick="handleCase('repetition')">Demande répétitive</button>
-<button onclick="handleCase('impulsif')">Demande sans réfléchir</button>
-<button onclick="handleCase('insolence')">Insolence</button>
-<button onclick="handleCase('mensonge')">Mensonge</button>
-<button onclick="handleCase('refus')">Refus d’obéir</button>
+<div class="button-group">
+  <button onclick="handleCase('repetition')">Demande répétitive</button>
+  <button onclick="handleCase('impulsif')">Demande sans réfléchir</button>
+  <button onclick="handleCase('insolence')">Insolence</button>
+  <button onclick="handleCase('mensonge')">Mensonge</button>
+  <button onclick="handleCase('refus')">Refus d’obéir</button>
+</div>
 
 <div id="result"></div>
+
+</div>
 
 <script>
 
 const cases = {
-  repetition: { gravity: "🟢 Gravité : Faible", class: "low" },
-  impulsif: { gravity: "🟢 Gravité : Faible", class: "low" },
-  insolence: { gravity: "🟠 Gravité : Moyenne", class: "medium" },
-  mensonge: { gravity: "🔴 Gravité : Élevée", class: "high" },
-  refus: { gravity: "⛔ Gravité : Intolérable", class: "critical" }
+  repetition: { gravity: "🟢 Gravité : Faible", class: "low", level: 1 },
+  impulsif: { gravity: "🟢 Gravité : Faible", class: "low", level: 1 },
+  insolence: { gravity: "🟠 Gravité : Moyenne", class: "medium", level: 2 },
+  mensonge: { gravity: "🔴 Gravité : Élevée", class: "high", level: 3 },
+  refus: { gravity: "⛔ Gravité : Intolérable", class: "critical", level: 4 }
 };
 
 const reformulations = {
@@ -68,16 +190,14 @@ const reformulations = {
   ]
 };
 
-/* Sanctions faibles */
 const lowPunishments = [
   "Préparer un café ou un thé au parent référent.",
   "Offrir un massage de 5 minutes.",
   "Faire un câlin officiel et sincère.",
   "Réaliser un dessin personnalisé.",
-  "Aider sur une petite tâche domestique."
+  "Aider spontanément sur une petite tâche domestique."
 ];
 
-/* Sanctions moyennes */
 const characters = ["un chevalier", "une princesse", "un astronaute", "un ninja", "un pirate"];
 const victims = ["son chat", "une licorne", "un roi", "un dragon", "une fée"];
 
@@ -87,44 +207,61 @@ function generateThemedLetter() {
   return `Rédiger une lettre d’excuse dans laquelle ${char} a été insolent envers ${victim}, avec morale finale sur le respect.`;
 }
 
-/* Sanctions graves */
 const highPunishments = [
   "Privation d’écran pendant 48h.",
   "Nettoyage complet de la chambre sous supervision.",
-  "Rédaction d’un mot d’excuse argumenté.",
   "Rangement complet de la salle de jeux.",
   "Tâches ménagères supplémentaires."
 ];
 
-/* Sanctions absurdes longues */
-const absurdPunishments = [
- "Enfermement dans les oubliettes du royaume familial pendant quatorze cycles lunaires, nourri exclusivement de soupe médiévale tiède.",
-  "Condamnation à servir comme écuyer personnel du parent suprême avec révérence obligatoire à chaque entrée dans la pièce.",
-  "Exil temporaire au sommet de la Tour des Devoirs Infinis avec obligation de méditer sur la notion d’obéissance.",
-  "Participation forcée à la Grande Quête du Rangement Éternel jusqu’à purification complète de l’honneur familial.",
-  "Offrande symbolique aux lions impériaux de l’arène domestique sous regard solennel du Conseil des Parents."
-];
+const medievalPunishments = {
+  1: [
+    "Nettoyage intégral des écuries royales et ramassage officiel du crottin.",
+    "Nuit symbolique dans l’écurie avec couverture rêche et paille réglementaire.",
+    "Consommation d’une soupe d’orties préparée selon la tradition ancestrale.",
+    "Service comme porteur d’eau au puits du village durant une demi-journée."
+  ],
+  2: [
+    "Corvée prolongée dans les cuisines du château sous supervision du maître queux.",
+    "Rédaction publique d’un serment d’honneur devant la cour familiale.",
+    "Veillée obligatoire dans la tour de garde pour méditation sur le respect.",
+    "Balayage complet de la grande salle du château à l’aube."
+  ],
+  3: [
+    "Enfermement symbolique dans les oubliettes du royaume pour réflexion intensive.",
+    "Transformation imaginaire en grenouille pour une durée indéterminée, coassement inclus.",
+    "Exil temporaire au sommet de la Tour des Devoirs Infinis avec récitation du code parental.",
+    "Service forcé comme écuyer du parent souverain avec révérence protocolaire."
+  ],
+  4: [
+    "Bannissement dramatique du royaume familial jusqu’à preuve de loyauté retrouvée.",
+    "Condamnation à la Grande Quête du Rangement Éternel jusqu’à restauration complète de l’honneur.",
+    "Métamorphose légendaire en créature des marais pendant quarante jours symboliques.",
+    "Jugement solennel devant le Conseil Suprême des Parents avec sentence irrévocable."
+  ]
+};
 
 function randomItem(array) {
   return array[Math.floor(Math.random() * array.length)];
 }
 
 function handleCase(type) {
-
   const caseInfo = cases[type];
   const reformulation = randomItem(reformulations[type]);
 
   let punishment;
 
-  if (caseInfo.class === "low") {
+  if (caseInfo.level === 1) {
     punishment = randomItem(lowPunishments);
   }
-  else if (caseInfo.class === "medium") {
+  else if (caseInfo.level === 2) {
     punishment = generateThemedLetter();
   }
   else {
     punishment = randomItem(highPunishments);
   }
+
+  const medieval = randomItem(medievalPunishments[caseInfo.level]);
 
   const result = `
 ${caseInfo.gravity}
@@ -135,8 +272,8 @@ ${reformulation}
 🛑 Sanction :
 ${punishment}
 
-🏰 Sanction alternative :
-${randomItem(absurdPunishments)}
+🏰 Sentence médiévale correspondante :
+${medieval}
   `;
 
   const resultDiv = document.getElementById("result");
